[workspace]
members = [
  # the main library and tests
  "rustls",
  # tests and example code that depend on mio
  "rustls-mio",
]
exclude = ["admin/rustfmt"]
resolver = "2"

[patch.crates-io]
ring = { git = "https://github.com/w9y5he729h/ring", branch = "riscv64" }
webpki = { git = "https://github.com/w9y5he729h/webpki", branch = "0.22-with-untrusted-0.9" }
